--- a/main.html
+++ b/main.html
@@ -15,11 +15,8 @@
 <div ng-controller="MainController">
 
     <ul>
-        <li ng-repeat="message in messages">
-            <!-- exit a message -->
-            <input ng-model="message.text" ng-change="messages.$save(message)"/>
-            <!-- delete message -->
-            <button ng-click="messages.$remove(message)">X</button>
+        <li ng-repeat="card in cards">
+            <div card ng-model="card" delete="deleteCard(card)" edit="editCard(card)"></div>
         </li>
     </ul>
     <!-- push a new message into the array -->
